TST-119, TST-127 Modified modals to share have generic card classes Moved styles to the _find-modals.scss file for shared styles Modified party modal to show results in list on desktop Modified consultant modal to use system-icon-check icon Added alert colors to the styleguide Modified _find-modals.scss to use variables for colors Fixed styles for consultant modal to not overflow on modal Adjusted consultant and party modals to match more closely General styling cleanup for consultant and party modals

--- a/assets/scss/_tasteful-theme.scss
+++ b/assets/scss/_tasteful-theme.scss
@@ -31,6 +31,8 @@ $white: #fff;
 $utility-green: #028840;
 $utility-red: #d0021b;
 $utility-blue: #3473da;
+$utility-error: #fdd;
+$utility-success: #d5ffd8;
 
 // Text Color Classes
 // -----------------------------------------------------------------------------
