--- a/assets/scss/custom/layout/_find-a-consultant.scss
+++ b/assets/scss/custom/layout/_find-a-consultant.scss
@@ -53,58 +53,27 @@
                 }
                 .consultant-card {
                     display: flex;
+                    justify-content:space-between;
                     padding: 10px 0;
                     width: 100%;
-                    .selected-header {
-                        display: none;
-                    }
                     &.selected {
-                        width: 496px;
-                        border: 3px solid $teal;
+                        flex-wrap: wrap;
                         margin: 10px 0px 10px 0;
                         padding-top: 0;
-                        flex-wrap: wrap;
                         position: relative;
-                        left: -12px;
                         .selected-header {
-                            color: $white;
-                            flex-basis: 100%; 
-                            height: 38px; 
-                            display: flex;
-                            background-color: $teal;
-                            margin-bottom: 10px;
-                            top: -2px;
-                            position: relative;
-                            .check-icon {
-                                width: 35px;
-                                height: 35px;
-                                margin: 0 10px 0 7px;
-                                background-size: cover;
-                                background-image: url("https://cdn3.iconfinder.com/data/icons/sympletts-free-sampler/128/circle-check-512.png");
-                            }
-                            .selection-title {
-                                top: -2px;
-                                position: relative;
-                            }
-                        }
-                        .consultant-image {
-                            padding-left: 10px;
-                        }
-                        .consultant-info {
-                            padding-right: 10px;
                         }
                     }
                     .consultant-image {
-                        margin-right: 10px;
+                        width:30%;
                         img {
                             max-height: 135px;  
-                            min-width: 100px;
                         }
                     }
                     .consultant-info {
                         display: flex;
+                        flex-basis:65%;
                         flex-direction: column;
-                        flex-grow: 1;
                         .system-14 {
                             font-size: 12px;
                         }
@@ -149,12 +118,16 @@
             .genmodal-body {
                 .consultant-footer {
                     .button-secondary-icon {
-                        width: 30%; 
+                        width: 40%; 
                     }
                 }
                 .buy-wide-card {
                     .consultant-card {
+                        .consultant-image {
+                            min-width: 100px;
+                        }
                         .consultant-info {
+                            padding-left:0;
                             .system-14 {
                                 font-size: 14px;
                                 .consultant-phone {
@@ -168,7 +141,15 @@
                                     }
                                 }
                             }
-
+                        }
+                    }
+                    &.selected {
+                        .consultant-image {
+                            padding-left: 10px;
+                        }
+                        .consultant-info {
+                            padding-left:10px;
+                            padding-right: 10px;
                         }
                     }
                     .card-form {
